--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:h2:file:./data/doggo-db;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Подключение к БД (docker-compose service name: db)
+spring.datasource.url=jdbc:postgresql://db:5432/doggo
+spring.datasource.username=dog
+spring.datasource.password=dog
+
+# JPA
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-logging.level.org.springframework.web=INFO
+spring.jpa.show-sql=false
+
+server.port=8080
