--- a/_devops/Jenkins/Jenkinsfile
+++ b/_devops/Jenkins/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
                             ]
     }
     }
-    stage('build and deploy') 
+    stage('build and deploy'){ 
       steps {
         sh 'docker compose down || true'
         sh 'docker compose up -d --build'
