--- a/_devops/Jenkins/Jenkinsfile
+++ b/_devops/Jenkins/Jenkinsfile
@@ -17,8 +17,8 @@ pipeline {
     }
     stage('build and deploy'){ 
       steps {
-        sh 'docker compose down || true'
-        sh 'docker compose up -d --build'
+        sh 'docker-compose -f ./_devops/docker-compose/docker-compose.yml down || true'
+        sh 'docker-compose -f ./_devops/docker-compose/docker-compose.yml up -d --build'
       }
     }
   }
