--- a/_devops/Jenkins/Jenkinsfile
+++ b/_devops/Jenkins/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
 
   stages {
     stage('Checkout') {
-      steps checkout scm: [$class: 'GitSCM',
+      steps { checkout scm: [$class: 'GitSCM',
           userRemoteConfigs: [[url: 'git@https://github.com/Bruno44rus/jenkins_practise.git'
                               //credentialsId: 'myCredId'
                               ]],
