--- a/_devops/docker-compose/docker-compose.yml
+++ b/_devops/docker-compose/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.8'
 services:
   app:
-    build: ./../../Dockerfile
+    build: 
+      context: ./Dockerfile
     ports:
       - "8080:8080"
     depends_on:
