--- a/_devops/Jenkins/Jenkinsfile
+++ b/_devops/Jenkins/Jenkinsfile
@@ -12,6 +12,8 @@ pipeline {
     }
     stage('build and deploy'){ 
       steps {
+        sh 'pwd'
+        sh 'ls'
         sh 'docker-compose -f ./_devops/docker-compose/docker-compose.yml down || true'
         sh 'docker-compose -f ./_devops/docker-compose/docker-compose.yml up -d'
       }
