--- a/_devops/docker-compose/docker-compose.yml
+++ b/_devops/docker-compose/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3.8'
 services:
   app:
-    build: 
-      context: ./../../Dockerfile
+    build: .
     ports:
       - "8080:8080"
     depends_on:
